# tablet-second-monitor

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIA-INICIO-RAPIDO.md  How_this_app_works.md  LICENSE  QUICK-START.es.md  QUICK-START.md  README.md  SETUP.md  SETUP_AND_START.bat  START.bat  START_SAFE.bat  STOP.bat  USB_SAFE.bat  build.ps1  health-check.ps1  package.ps1  setup.ps1  start-usb.bat
.github/workflows/: android-ci.yml  release.yml  rust-ci.yml
android-client/: settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/res/drawable/: bg_app_root.xml  bg_top_panel.xml  ic_app.xml  spinner_popup_bg.xml
android-client/app/src/main/res/layout/: activity_main.xml  spinner_dropdown_item_white.xml  spinner_item_white.xml
android-client/app/src/main/res/values-es/: arrays.xml  strings.xml
docs/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  SETUP.md  docker-compose.yml  requirements.json  setup.iss
drivers/virtual-display/: README.md
host-windows/: Cargo.toml
host-windows/src/: capture.rs  input.rs  main.rs
logs/: nvenc-diagnostic-20260417-183155.txt  nvenc-diagnostic-20260417-184051.txt
scripts/: STOP.bat  build.ps1  ensure-runtime.ps1  first-run.ps1  health-check.ps1  install-virtual-display.ps1  launcher.ps1  package.ps1  release.ps1  remove-virtual-display.ps1  runtime-env.ps1  setup.ps1  start-usb.bat  start-usb.ps1  start-wifi.bat  start-wifi.ps1  stop-usb.bat  stop-usb.ps1
(+8 files in other folders)
